jenkins-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"jenkins-k8s"},"name":"jenkins-k8s-deployment","namespace":"jenkins"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"jenkins-k8s"}},"template":{"metadata":{"labels":{"app":"jenkins-k8s"}},"spec":{"containers":[{"image":"jenkins4eval/jenkins:latest","imagePullPolicy":"Always","name":"jenkins-k8s","ports":[{"containerPort":8080}],"volumeMounts":[{"mountPath":"/var/jenkins_home","name":"jenkins-ho [...]
  creationTimestamp: "2021-06-29T05:16:50Z"
  generation: 3
  labels:
    app: jenkins-k8s
  name: jenkins-k8s-deployment
  namespace: jenkins
  resourceVersion: "11004017"
  uid: 1f5a88b2-dda6-45ae-823c-9d1ee2fdcec4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins-k8s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins-k8s
    spec:
      containers:
      - image: jenkins4eval/jenkins:latest
        imagePullPolicy: Always
        name: jenkins-k8s
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-06-29T05:16:50Z"
    lastUpdateTime: "2021-06-29T05:17:56Z"
    message: ReplicaSet "jenkins-k8s-deployment-75744dcfbb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2021-07-19T07:02:45Z"
    lastUpdateTime: "2021-07-19T07:02:45Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
