jenkins-k8s/jenkins-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"jenkins-k8s-discovery","namespace":"jenkins"},"spec":{"ports":[{"name":"agents","port":50000,"protocol":"TCP","targetPort":50000}],"selector":{"app":"jenkins-k8s"}}}
  creationTimestamp: "2021-06-29T05:32:23Z"
  name: jenkins-k8s-discovery
  namespace: jenkins
  resourceVersion: "9231117"
  uid: 934c8aa4-7f12-46b8-a90f-f15136650917
spec:
  clusterIP: 10.43.227.32
  clusterIPs:
  - 10.43.227.32
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: agents
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins-k8s
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
