jenkins-k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"jenkins-k8s-service","namespace":"jenkins"},"spec":{"ports":[{"name":"web-ui","port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"jenkins-k8s"}}}
  creationTimestamp: "2021-06-29T05:14:50Z"
  name: jenkins-k8s-service
  namespace: jenkins
  resourceVersion: "9231113"
  uid: 32dbf454-9e64-4138-8c55-d4fb426b90c5
spec:
  clusterIP: 10.43.186.247
  clusterIPs:
  - 10.43.186.247
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web-ui
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins-k8s
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
